# nixt

./: devenv.nix  pyproject.toml
.direnv/: devenv-profile-7c9df8e9fdc54fb7c561677fd17c8632403629f7.rc  devenv-profile-934d09a7e57c3728722600db8ac327d52e5e500f.rc
