[tool.poetry]
name = "nixt"
version = "0.1.0"
description = ""
authors = ["C. R. Oldham <cro@ncbt.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
ptpython = "^3.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
